// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npcPageBuilder multi-version functionality should deduplicate multiChildren NPCs by ID 1`] = `
"{{New Content}}
{{Infobox Monster
|version1 = 1
|version2 = 2
|name1 = Guard
|name2 = Archer
|image1 = [[File:Guard.png|120px]]
|image2 = [[File:Archer (2).png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat1 = 21
|combat2 = 25
|size = 1
|hitpoints = 1
|att = 1
|def = 1
|mage = 1
|range = 1
|id1 = 8001
|id2 = 8002
}}
'''Guard'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder multi-version functionality should generate numbered image file names 1`] = `
"{{New Content}}
{{Infobox Monster
|version1 = 1
|version2 = 2
|version3 = 3
|name = Guard
|image1 = [[File:Guard.png|120px]]
|image2 = [[File:Guard (2).png|120px]]
|image3 = [[File:Guard (3).png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 21
|size = 1
|examine1 = He tries to keep order around here.
|examine2 = She tries to keep order around here.
|examine3 = He guards this area.
|hitpoints = 1
|att = 1
|def = 1
|mage = 1
|range = 1
|id1 = 1001
|id2 = 1002
|id3 = 1003
}}
'''Guard'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder multi-version functionality should handle mixed combat and non-combat NPCs by choosing Monster template 1`] = `
"{{New Content}}
{{Infobox Monster
|version1 = 1
|version2 = 2
|name = Guard
|image1 = [[File:Guard.png|120px]]
|image2 = [[File:Guard (2).png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat1 = 0
|combat2 = 21
|size = 1
|examine1 = He tries to keep order around here.
|examine2 = She tries to keep order around here.
|hitpoints = 1
|att = 1
|def = 1
|mage = 1
|range = 1
|id1 = 1001
|id2 = 1002
}}
'''Guard'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder multi-version functionality should handle mixed null and valid names by preferring valid name 1`] = `
"{{New Content}}
{{Infobox Monster
|version1 = 1
|version2 = 2
|version3 = 3
|name1 = null
|name2 = Guard
|name3 = null
|image1 = [[File:null.png|120px]]
|image2 = [[File:Guard (2).png|120px]]
|image3 = [[File:null (3).png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat1 = 0
|combat2 = 21
|combat3 = 21
|size = 1
|hitpoints = 1
|att = 1
|def = 1
|mage = 1
|range = 1
|id1 = 7000
|id2 = 7001
|id3 = 7002
}}
'''Guard'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder multi-version functionality should handle multiChildren NPCs with null names 1`] = `
"{{New Content}}
{{Infobox Monster
|version1 = 1
|version2 = 2
|name = Guard
|image1 = [[File:Guard.png|120px]]
|image2 = [[File:Guard (2).png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat1 = 21
|combat2 = 22
|size = 1
|hitpoints = 1
|att = 1
|def = 1
|mage = 1
|range = 1
|id1 = 5001
|id2 = 5002
}}
'''Guard'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder multi-version functionality should handle multiChildren NPCs with valid names (not null) 1`] = `
"{{New Content}}
{{Infobox Monster
|version1 = 1
|version2 = 2
|version3 = 3
|name1 = Captain Guard
|name2 = Guard Recruit
|name3 = Guard Veteran
|image1 = [[File:Captain Guard.png|120px]]
|image2 = [[File:Guard Recruit (2).png|120px]]
|image3 = [[File:Guard Veteran (3).png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat1 = 25
|combat2 = 15
|combat3 = 30
|size = 1
|hitpoints = 1
|att = 1
|def = 1
|mage = 1
|range = 1
|id1 = 6000
|id2 = 6001
|id3 = 6002
}}
'''Captain Guard'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder multi-version functionality should handle multiple NPCs with shared parameters 1`] = `
"{{New Content}}
{{Infobox Monster
|version1 = 1
|version2 = 2
|name = Guard
|image1 = [[File:Guard.png|120px]]
|image2 = [[File:Guard (2).png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 21
|size = 1
|examine1 = He tries to keep order around here.
|examine2 = She tries to keep order around here.
|hitpoints = 1
|att = 1
|def = 1
|mage = 1
|range = 1
|id1 = 1001
|id2 = 1002
}}
'''Guard'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder multi-version functionality should handle single NPC correctly (backward compatibility) 1`] = `
"{{New Content}}
{{Infobox Monster
|name = Guard
|image = [[File:Guard.png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 21
|size = 1
|examine = He tries to keep order around here.
|hitpoints = 1
|att = 1
|def = 1
|mage = 1
|range = 1
|id = 1001
}}
'''Guard'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder multi-version functionality should use NPC template when all NPCs have no combat level 1`] = `
"{{New Content}}
{{Infobox NPC
|version1 = 1
|version2 = 2
|name = Banker
|image1 = [[File:Banker.png|120px]]
|image2 = [[File:Banker (2).png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|race = [[Human]]
|location = 
|gender = Male
|options = Talk-to, Trade
|map = No
|id1 = 2001
|id2 = 2002
}}
'''Banker'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder should build monster infobox with combat level 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 100
|size = 2
|hitpoints = 100
|att = 200
|def = 300
|mage = 400
|range = 500
|id = 1
}}
[[File:name chathead.png|left]]
'''name''' is an NPC.'''name'''"
`;

exports[`npcPageBuilder should build npc infobox without combat level 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 1
|id = 1
}}
[[File:name chathead.png|left]]
'''name''' is an NPC.'''name'''"
`;

exports[`npcPageBuilder should build npc page with chathead when has chatheadModels 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 1
|id = 1
}}
[[File:name chathead.png|left]]
'''name''' is an NPC.'''name'''"
`;

exports[`npcPageBuilder should build npc page with transcript 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 1
|id = 1
}}
[[File:name chathead.png|left]]
'''name''' is an NPC.'''name'''

==Dialogue==
{{Hastranscript|npc}}
"
`;

exports[`npcPageBuilder should build npc page without chathead when no chatheadModels 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 1
|id = 1
}}
'''name'''"
`;

exports[`npcPageBuilder should strip HTML tags from NPC name in page content 1`] = `
"{{New Content}}
{{Infobox Monster
|name = Tornado
|image = [[File:Tornado.png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 1
|id = 1
}}
[[File:Tornado chathead.png|left]]
'''Tornado''' is an NPC.'''Tornado'''"
`;

exports[`npcPageBuilder should use beta id when Context.beta is true 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|release = [[19 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 1
|id = beta1
}}
[[File:name chathead.png|left]]
'''name''' is an NPC.'''name'''"
`;
